Added rudimentary shooting system, based on Marker3D not camera position

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Characters/SideScrollerPlayer/SideScrollerPlayer.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Levels/", "res://GameObjects/Weapons/", "res://GameObjects/Weapons/Guns/", "res://GameObjects/Weapons/Guns/Rifles/", "res://Characters/", "res://Characters/SideScrollerPlayer/", "res://Characters/Player/")
+dock_filesystem_selected_paths=PackedStringArray("res://GameObjects/Bullet.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Levels/", "res://GameObjects/", "res://GameObjects/Weapons/", "res://GameObjects/Weapons/Guns/", "res://GameObjects/Weapons/Guns/Rifles/", "res://Characters/", "res://Characters/SideScrollerPlayer/", "res://Characters/Player/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Debug_Level.tscn", "res://Characters/Player/Player.tscn", "res://Characters/SideScrollerPlayer/SideScrollerPlayer.tscn")
-current_scene="res://Debug_Level.tscn"
+open_scenes=PackedStringArray("res://Debug_Level.tscn", "res://Characters/Player/Player.tscn", "res://GameObjects/Weapons/Guns/Rifles/Steam_Rifle.tscn", "res://GameObjects/Bullet.tscn")
+current_scene="res://GameObjects/Weapons/Guns/Rifles/Steam_Rifle.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://GameObjects/Weapons/Guns/Rifles/AnimatedSprite3D.gd", "res://Characters/Player/Player.gd", "res://Characters/SideScrollerPlayer/Player_Camera.gd", "res://Characters/SideScrollerPlayer/SideScrollerPlayer.gd", "res://GameObjects/Weapons/Guns/Rifles/Steam_Rifle.gd", "res://GameObjects/Weapons/Guns/Rifles/Steam_Rifle_Sprite.gd", "res://TopDownPlayer.gd"]
-selected_script="res://Characters/Player/Player.gd"
+open_scripts=["res://GameObjects/Weapons/Guns/Rifles/AnimatedSprite3D.gd", "res://GameObjects/Bullet.gd", "res://Characters/Player/GunController.gd", "res://Characters/Player/Player.gd", "res://Characters/SideScrollerPlayer/Player_Camera.gd", "res://Characters/SideScrollerPlayer/SideScrollerPlayer.gd", "res://GameObjects/Weapons/Guns/Rifles/Steam_Rifle.gd", "res://GameObjects/Weapons/Guns/Rifles/Steam_Rifle_Sprite.gd", "res://TopDownPlayer.gd"]
+selected_script="res://GameObjects/Weapons/Guns/Rifles/Steam_Rifle.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
